--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "axios": "^1.4.0",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.0",
-    "axios": "^1.4.0",
-    "lucide-react": "^0.263.1"
+    "recharts": "^3.1.0",
+    "typescript": "^4.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
